--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:icon="@mipmap/ic_launcher">
         <meta-data 
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBILLmaUJWRv6-TrXZCiXR9GwLmOSxc0kw" 
+            <!--  aqui vai a chave de api do android            -->
         />
         <activity
             android:name=".MainActivity"
